--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "API REST - films",
     "main": "index.js",
     "scripts": {
-        "start": "node ./src/index.js",
-        "dev": "nodemon ./src/index.js"
+        "start": "node index.js",
+        "dev": "nodemon index.js"
     },
     "keywords": [
         "nodeJS",
